<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grey"
    tools:context="com.brethauerit.volleyball.view.StatisticsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/answered_questions"
                    android:id="@+id/textView2"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/number_answered"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/answered_d_questions"
                    android:id="@+id/textView"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/number_answered_d"
                    android:layout_column="3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/answered_c_questions"
                    android:id="@+id/textView3"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/number_answered_c"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/right_answered_questions"
                    android:id="@+id/textView4"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/rightall"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/right_answered_d_questions"
                    android:id="@+id/textView5"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/right_d"
                    android:layout_column="3"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/right_answered_c_questions"
                    android:id="@+id/textView6"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/right_c"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/wrong_answered_questions"
                    android:id="@+id/textView7"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/wrong"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/wrong_answered_d_questions"
                    android:id="@+id/textView8"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/wrong_d"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/wrong_answered_c_questions"
                    android:id="@+id/textView9"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/wrong_c"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/last_wrong_questions"
                    android:id="@+id/textView10"
                    android:layout_column="0" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/last_wrong_d_questions"
                    android:id="@+id/textView11"
                    android:layout_column="0" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST"
                    android:id="@+id/wrong_d_list"
                    android:layout_column="0" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/last_wrong_c_questions"
                    android:id="@+id/textView12"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/wrong_c_list"
                    android:text="TEST"
                    android:layout_column="0" />
            </TableRow>
        </TableLayout>

    </ScrollView>
</RelativeLayout>
